--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/kicker"]
 	path = lib/kicker
-	url = git@github.com:infracamp/kicker.git
+	url = https://github.com/infracamp/kicker.git
